--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.20.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-loader-spinner": "^3.1.14",
+    "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4"
   },
