--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-dom": "^17.0.0",
     "react-loader-spinner": "^3.1.14",
     "react-promise-tracker": "^2.1.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
