--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5"
   },
   "scripts": {
