Flag menu icons added

--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "axios-delay": "^1.0.0-rc6",
     "date-and-time": "^0.14.1",
     "express": "^4.17.1",
+    "material-ui-flags": "^1.0.15",
     "react": "^17.0.0",
+    "react-country-flag": "^2.3.0",
     "react-dom": "^17.0.0",
+    "react-flagkit": "^2.0.4",
     "react-loader-spinner": "^3.1.14",
     "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.2",
